# qtplogadapter

./: .gitmodules  CMakeLists.txt  PlogMessageView.qml  README.md
src/logging/: basicformatter.cpp  basicformatter.h  guiappender.cpp  guiappender.h  messagehandler.cpp  messagehandler.h  setup.cpp  setup.h
src/qml/: PlogMessageView.qml
src/qtplogadapter/: basicformatter.cpp  basicformatter.h  guiappender.cpp  guiappender.h  guimessage.h  messagehandler.cpp  messagehandler.h  plogmessagemodel.cpp  plogmessagemodel.h  setup.cpp  setup.h
